--- a/.github/workflows/openapi-analysis.yml
+++ b/.github/workflows/openapi-analysis.yml
@@ -24,25 +24,18 @@ jobs:
       uses: actions/checkout@v4
       
     - name: OpenAPI Analyzer
-      uses: ApyGuard/apyguard_openapi_analysis@v1
+      id: analyze
+      uses: ApyGuard/apyguard_openapi_analysis@main
       with:
         # Path to your OpenAPI/Swagger specification file
         file: test-swagger.json
         
-        # Optional: Specify the output format (json, html, markdown)
-        output-format: json
+        # Output format (json or summary)
+        output_format: json
         
-        # Optional: Specify output file path
-        output-file: analysis-results.json
-        
-        # Optional: Enable detailed analysis
-        detailed-analysis: true
-        
-        # Optional: Include security analysis
-        security-analysis: true
-        
-        # Optional: Include performance analysis
-        performance-analysis: true
+    - name: Save analysis results
+      run: |
+        echo '${{ steps.analyze.outputs.analysis }}' > analysis-results.json
         
     - name: Upload analysis results
       uses: actions/upload-artifact@v4
@@ -57,25 +50,25 @@ jobs:
       uses: actions/github-script@v7
       with:
         script: |
-          const fs = require('fs');
-          try {
-            const results = JSON.parse(fs.readFileSync('analysis-results.json', 'utf8'));
-            const comment = `## OpenAPI Analysis Results
+          const analysis = JSON.parse('${{ steps.analyze.outputs.analysis }}');
+          const comment = `## 🔍 OpenAPI Analysis Results
           
-          **Analysis completed successfully!**
+          **Valid**: ${analysis.is_valid ? '✅' : '❌'}
+          **Suggestions**: ${analysis.suggestions ? analysis.suggestions.length : 0}
+          **Operations**: ${analysis.summary ? analysis.summary.operations_count : 0}
+          **Paths**: ${analysis.summary ? analysis.summary.paths_count : 0}
+          **Schemas**: ${analysis.summary ? analysis.summary.schemas_count : 0}
           
-          - **Total Endpoints**: ${results.endpoints?.length || 'N/A'}
-          - **Security Issues**: ${results.security?.issues?.length || 0}
-          - **Performance Issues**: ${results.performance?.issues?.length || 0}
+          ${analysis.suggestions && analysis.suggestions.length > 0 ? 
+            `### 📋 Top Suggestions:\n\n${analysis.suggestions.slice(0, 5).map(s => `- ${s}`).join('\n')}` : 
+            '### ✅ No suggestions found! Your OpenAPI specification looks great! 🎉'
+          }
           
           Detailed results are available in the workflow artifacts.`;
             
-            github.rest.issues.createComment({
-              issue_number: context.issue.number,
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              body: comment
-            });
-          } catch (error) {
-            console.log('Could not read analysis results:', error.message);
-          }
+          github.rest.issues.createComment({
+            issue_number: context.issue.number,
+            owner: context.repo.owner,
+            repo: context.repo.repo,
+            body: comment
+          });
